// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoriesPage should match snapshot and render CategoryTiles if the path is the root category 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Augsburg
    </title>
  </HelmetWrapper>
  <Breadcrumbs
    direction="ltr"
  />
  <Tiles
    tiles={
      Array [
        TileModel {
          "_id": "3649",
          "_isExternalUrl": false,
          "_path": "/augsburg/de/willkommen",
          "_thumbnail": "https://cms.integreat-ap…03/Beratung-150x150.png",
          "_title": "Willkommen",
        },
        TileModel {
          "_id": "3650",
          "_isExternalUrl": false,
          "_path": "/augsburg/de/anlaufstellen",
          "_thumbnail": "https://cms.integreat-ap…/03/Hotline-150x150.png",
          "_title": "Anlaufstellen zu sonstigen Themen",
        },
      ]
    }
    title="Augsburg"
  />
</div>
`;

exports[`CategoriesPage should match snapshot and render a Page if page has no children 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Willkommen in Augsburg - 
      Augsburg
    </title>
  </HelmetWrapper>
  <Breadcrumbs
    direction="ltr"
  >
    <Connect(Link)
      key="/augsburg/de"
      to="/augsburg/de"
    >
      Augsburg
    </Connect(Link)>
    <Connect(Link)
      key="/augsburg/de/willkommen"
      to="/augsburg/de/willkommen"
    >
      Willkommen
    </Connect(Link)>
  </Breadcrumbs>
  <Page
    content="some content"
    title="Willkommen in Augsburg"
  />
</div>
`;

exports[`CategoriesPage should match snapshot and render an Error if path is not valid 1`] = `
<FailureSwitcher
  error={[Error: The category /augsburg/de/not/valid does not exist here.]}
/>
`;

exports[`CategoriesPage should match snapshot render a CategoryList if the category is neither the root nor has children 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Willkommen - 
      Augsburg
    </title>
  </HelmetWrapper>
  <Breadcrumbs
    direction="ltr"
  >
    <Connect(Link)
      key="/augsburg/de"
      to="/augsburg/de"
    >
      Augsburg
    </Connect(Link)>
  </Breadcrumbs>
  <CategoryList
    categories={
      Array [
        Object {
          "children": Array [],
          "model": CategoryModel {
            "_availableLanguages": Object {
              "ar": 397,
              "de": 711,
              "en": 390,
            },
            "_content": "some content",
            "_id": 35,
            "_order": 1,
            "_parentId": 3649,
            "_parentUrl": "/augsburg/de/willkommen",
            "_path": undefined,
            "_thumbnail": "https://cms.integreat-ap…09/heart295-150x150.png",
            "_title": "Willkommen in Augsburg",
            "_url": "/augsburg/de/willkommen/willkommen-in-augsburg",
          },
        },
      ]
    }
    content=""
    title="Willkommen"
  />
</div>
`;
